fix: desktop homepage horizontal scrolling

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -211,7 +211,7 @@ html[data-theme="dark"] .tutorial-section-yellow {
 
 .three-columns {
     display: grid;
-    grid-template-columns: repeat(3, minmax(300px, 1fr));
+    grid-template-columns: repeat(3, minmax(250px, 1fr));
     gap: 2.5rem;
     margin-top: 3rem;
     margin-bottom: 2rem;
